# civilization-meta-model

./: .gitignore  LICENSE  README.md  README_ZH.md  pyproject.toml  requirements.txt
docs/: theory.md
examples/: 01_basic_usage.py  02_tang_song_case_study.py  03_parameter_analysis.py  04_custom_model.py  README.md  basic_usage.ipynb
src/civmodel/: __init__.py  constants.py  core.py  scanner.py
src/civmodel/utils/: visualize.py
tests/: test_core.py
