[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civilization-metamodel"
version = "0.1.0"
authors = [{name = "Civilization Meta-Model Contributors"}]
description = "A computational framework for simulating civilizational phase transitions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}

dependencies = [
    "numpy>=1.21",
    "matplotlib>=3.5",
]

[tool.setuptools.packages.find]
where = ["src"]